[FIX] web: make dynamic placeholder visible
**Scenario**
- set the desktop test browser size (1366x768)
- create a new email template,
- select a model
- open a DPH popover as first character of the content field

- Before:
  - the dynamic placeholder is in the DOM but not displayed as it has
    `visibility: hidden;` applied to its style attribute.

- After:
  - it is now properly displayed due to the ModelFieldSelectorPopover
    component's style changes introduced in this commit.

**Explanations**
This is a multifactor issue.

A) since the parent commit of this one, the new positioning now allows
   for an offset and thus does not try anymore to shift the orientation
   (from vertical to horizontal and opposite), leading to less tried
   directions (i.e. shifting is no more allowed from bottom to right)

B) the .o_model_field_selector_popover_page element has a fixed height,
   which in that scenario was large enough to make the repositioning
   computation not being able to fully place the popover at the bottom
   nor at the top of its target.

C) since [1], the EditorOverlay hides any overlay that overflows the
   top edge of its container.

In the current scenario:
- A's side-effect on B
- leads C to hide the DPH popover

Task: 3898084

[1]: (https://github.com/odoo/odoo/commit/e8b1a9f3a2f7debf26a2664173f0f33f82100345)

--- a/addons/web/static/src/core/model_field_selector/model_field_selector_popover.scss
+++ b/addons/web/static/src/core/model_field_selector/model_field_selector_popover.scss
@@ -1,10 +1,9 @@
 .o_model_field_selector_popover {
     width: 17rem;
+    max-height: 40vh;
 
     .o_model_field_selector_popover_body {
         .o_model_field_selector_popover_page {
-            height: 20rem;
-
             > .o_model_field_selector_popover_item {
                 background: $dropdown-bg;
 
